--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,6 +12,25 @@ services:
       - "3307:3306"
     volumes:
       - mysql_data:/var/lib/mysql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 20s
+      retries: 10
+
+  web:
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    command: sh -c "python backend/app/manage.py runserver 0.0.0.0:8000"
+    volumes:
+      - .:/app
+    ports:
+      - "8000:8000"
+    environment:
+      - DATABASE_URL=mysql://app_user:next_play@mysql:3306/student_hiring_db
+    depends_on:
+      mysql:
+        condition: service_healthy
 
 volumes:
   mysql_data:
